--- a/public/templates/lab-result.html
+++ b/public/templates/lab-result.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="img/fhir-reports.png">
+  <link rel="icon" href="../img/fhir-reports.png">
   <title>Results</title>
   <!-- CSS -->
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/lab-result.css" rel="stylesheet">
+  <link href="../css/bootstrap.css" rel="stylesheet">
+  <link href="../css/lab-result.css" rel="stylesheet">
   <!-- JS -->
-  <script src="js/buildFHIR.js"></script>
+  <script src="../js/buildFHIR.js"></script>
 </head>
 
 <body class="bg-light">
@@ -17,7 +17,7 @@
 <div class="container">
 
   <div class="py-5 text-center">
-    <img class="d-block mx-auto mb-4" src="img/fhir-reports.png" alt="" width="72" height="72">
+    <img class="d-block mx-auto mb-4" src="../img/fhir-reports.png" alt="" width="72" height="72">
     <h2>Results</h2>
     <p class="lead">The following resources were created to represent this report.<br>Select a resource below to view the raw JSON as it is on the server.</p>
   </div>
